# tech-chellenge-fiap

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: auth_utils.py  depends.py  main.py  models.py  routes.py  schemas.py  scrapper.py
app/db/: models.py
migrations/versions/: 682bc457ace3_add_user_table.py
